# semilife-server

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/common/: CMakeLists.txt  Types.hpp
include/entities/: CMakeLists.txt  Machine.hpp
include/managers/: CMakeLists.txt  MachineManager.hpp
src/: main.cpp
